# fastapi-jwt-auth

./: README.md  example.env  pyproject.toml
app/: __init__.py  api.py  model.py  query.py
app/auth/: auth_handler.py
