[tool.poetry]
name = "fastapi-jwt"
version = "0.1.0"
description = "FastAPI + JWT auth"
authors = ["SG"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
pyjwt = "^2.8.0"
python-decouple = "^3.8"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
